<resources>
    <string name="app_name">RR08-I04-001</string>
    <string name="lblRegistro">Registro de Producto</string>
    <string name="lblCodigo">Código</string>
    <string name="lblNombre">Nombre</string>
    <string name="lblEdad">Cantidad</string>

    <string name="btnAgregar">Agregar</string>
    <string name="btnBuscar">Buscar</string>
    <string name="btnEliminar">Eliminar</string>

    <string name="lblListado">Listado de Producto</string>
    <string name="lblBusqueda">Búsqueda de Productos</string>
    <string name="lblBuscar">Buscar por</string>
    <string name="lblTipo">Nombre o Código</string>

</resources>