<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/activity_buscar"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:orientation="vertical"
tools:context="com.exam.examrr08_i04_001.Buscar"
android:weightSum="1">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:text="@string/lblBusqueda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:gravity="center_horizontal"
            android:textStyle="normal|bold"
            android:textSize="18sp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/lblBuscar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                android:textStyle="normal|bold"
                android:textSize="16sp"
                android:layout_marginTop="20dp" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:id="@+id/radioGrupo">

                <RadioButton
                    android:id="@+id/radioCodigo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/lblCodigo" />

                <RadioButton
                    android:text="@string/lblNombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/radioNombre" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/lblTipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView8"
                android:textStyle="normal|bold"
                android:textSize="16sp"
                android:layout_marginTop="20dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/txtBuscador" />

            <Button
                android:text="@string/btnBuscar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnBuscar"
                android:layout_gravity="right"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/layoutEncontrado"
            android:layout_marginTop="20dp">

            <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtEncontrado"
                android:textStyle="normal|bold"
                android:textAlignment="center"
                android:textSize="17sp"
                android:padding="10dp"/>

            <Button
                android:text="@string/btnEliminar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnEliminar"
                android:layout_gravity="right"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>

</LinearLayout>

